--- a/public/base.css
+++ b/public/base.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css?family=Nunito'); /* font-family: "Nunito", sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap'); /* font-family: 'Montserrat', sans-serif; */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap'); /* font-family: 'Bebas Neue', cursive; */
 
 *,
@@ -11,13 +12,13 @@
 
 body {
     margin: 0;
-    font-family: "Nunito", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     font-weight: 500;
     line-height: 1.6;
     text-align: left;
     letter-spacing: 2px;
-    background: #0B0B0C;
+    background: #1b1b1b;
     color: white;
 }
 
@@ -27,13 +28,23 @@ p {
 }
 
 a {
-    color: rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 0.5);
     text-decoration: none;
 }
 
 a:hover {
     cursor: pointer;
     color: rgb(255, 255, 255);
+}
+
+table, caption, tbody, tfoot, thead, tr, th, td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
 }
 
 .app {
@@ -83,4 +94,12 @@ a:hover {
 .transition {
     /* Apply to buttons and elements that change state */
     transition: all 0.2s;
+}
+
+.icon-space-left {
+    margin-inline-start: 10px;
+}
+
+.icon-space-right {
+    margin-inline-end: 10px;
 }
