--- a/public/base.css
+++ b/public/base.css
@@ -10,14 +10,28 @@
     box-sizing: border-box;
 }
 
+:root {
+    /* Color */
+    --vc-clr-primary: rgb(25,238,2);
+    --vc-clr-black: #1b1b1b;
+
+    /* Icon */
+    --vc-icn-width: 1.2em;
+
+    /* Navigation */
+    --vc-nav-width: 30px;
+    --vc-nav-color: var(--vc-clr-black);
+    --vc-nav-background-color: var(--vc-clr-primary);
+}
+
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 500;
     line-height: 1.6;
     text-align: left;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     background: #1b1b1b;
     color: white;
 }
@@ -48,7 +62,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 }
 
 video {
-    padding: 0 !important;
+    display: block;
 }
 
 .app {
@@ -132,6 +146,111 @@ video {
 .sml-text {
     width: 100%;
     text-align: center;
+}
+
+.carousel {
+    position: relative;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+.carousel * {
+    box-sizing: border-box;
+}
+
+.carousel__track {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+
+.carousel__viewport {
+    overflow: hidden;
+}
+
+.carousel__slide {
+    scroll-snap-stop: auto;
+    flex-shrink: 0;
+    margin: 0;
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carousel__icon {
+    width: var(--vc-icn-width);
+    height: var(--vc-icn-width);
+    fill: currentColor;
+}
+
+.carousel__pagination {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.carousel__pagination-button {
+    margin: var(--vc-pgn-margin);
+    width: var(--vc-pgn-width);
+    height: var(--vc-pgn-height);
+    border-radius: var(--vc-pgn-height);
+    border: 0;
+    cursor: pointer;
+    background-color: var(--vc-pgn-background-color);
+}
+
+.carousel__pagination-button--active {
+    background-color: var(--vc-pgn-active-color);
+}
+
+.carousel__prev,
+.carousel__next {
+    background-color: var(--vc-nav-background-color);
+    border-radius: var(--vc-nav-width);
+    width: var(--vc-nav-width);
+    height: var(--vc-nav-width);
+    text-align: center;
+    font-size: calc(var(--vc-nav-width) * 2 / 3);
+    padding: 0;
+    color: var(--vc-nav-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    border: 0;
+    cursor: pointer;
+}
+
+.carousel__prev {
+    top: 50%;
+    left: 0;
+    transform: translate(-50%, -50%);
+}
+
+.carousel__next {
+    top: 50%;
+    right: 0;
+    transform: translate(50%, -50%);
+}
+
+.carousel--rtl .carousel__prev {
+    left: auto;
+    right: 0;
+    transform: translate(50%, -50%);
+}
+
+.carousel--rtl .carousel__next {
+    right: auto;
+    left: 0;
+    transform: translate(-50%, -50%);
+}
+
+.carousel__prev--in-active,
+.carousel__next--in-active {
+    display: none;
 }
 
 @media screen and (max-width: 320px) {
